--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.5",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "firebase": "^9.19.1",
+    "leaflet": "^1.9.3",
     "next": "13.3.0",
     "postcss": "8.4.21",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
+    "stripe": "^12.1.1",
     "tailwindcss": "3.3.1"
   }
 }
